test/tests/errors/error-if-exp-not-bool.sm
// true
// false
// false
/**/
/**/

program {
    var x: int = 1 ? 1 : 2;
}